2002-06-02  Alex Graveley  <alex@ximian.com>

	* modules/desktop-method.c (do_get_file_info): Set mime_type to
	"x-directory/vfolder-desktop", to allow launcher creation from
	nautilus.
	(do_get_file_info_from_handle): Ditto.

Fri May 31 10:23:01 2002  George Lebl <jirka@5z.com>

	* modules/applications.vfolder-info.in,
	  modules/preferences.vfolder-info.in: Handle both kewords
	  'Sawfish' and 'X-GNOME-Sawfish' to make a clear transition,
	  in case someone has an older install of sawfish.

Thu May 30 17:11:04 2002  George Lebl <jirka@5z.com>

	* modules/preferences.vfolder-info.in: arghh! we have two places
	  where preference menus are defined.  Ok fix the bug here as well.

Thu May 30 17:04:48 2002  George Lebl <jirka@5z.com>

	* modules/applications.vfolder-info.in: don't put sawfish capplets
	  in the advanced dir fixes #77772

Thu May 30 10:03:03 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: the directories are of type
	  x-directory/vfolder-desktop

2002-05-28  Jody Goldberg <jody@gnome.org>

	* libgnomevfs/gnome-vfs-application-registry.c
	(gnome_vfs_application_registry_init) : initialize before we load the
	  applications so that things do not loop.

Tue May 28 15:04:17 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: fix adding/removing of includes
	  to remove inconsistencies between the has and the list

2002-05-27  Ian McKellar  <yakk@yakk.net>

	* configure.in:
	Don't make libgnomevfs depend on libbonobo. It doesn't need it and
	it isn't in the .pc file anyway.

2002-05-26  Alex Graveley  <alex@ximian.com>

	* configure.in (FAM_LIBS): Don't use C++ compiler to compile FAM
	test, as the problem is really with a miscompiled libfam which
	doesn't pull in the needed libstdc++.so, and hence won't link.
	Removing as per alexl's suggestion on bug #80826.

2002-05-24  Alex Graveley  <alex@ximian.com>

	* modules/applications.vfolder-info.in: Remove explicit